--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -192,3 +192,26 @@ form {
     font-size: 1rem;
   }
 }
+
+@media (max-width: 800px) {
+  .book--container {
+    flex-direction: column-reverse;
+  }
+ 
+  .reading-list-container {
+    min-height: 30vh;
+    padding-bottom: 20px;
+  }
+
+  .book-card-container {
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .book-card {
+    margin: 0;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
