Make webpage more responsive

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -201,6 +201,7 @@ form {
   .reading-list-container {
     min-height: 30vh;
     padding-bottom: 20px;
+    width: 100%;
   }
 
   .book-card-container {
